Front-end improvements
Restructured html for arbitrary number of playlists, added icons, added
loading screen, footer

--- a/prototype/Remix Recommender.ipynb
+++ b/prototype/Remix Recommender.ipynb
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -681,8 +681,32 @@
     "import spotify_adaptors\n",
     "reload(spotify_adaptors)\n",
     "from spotify_adaptors import Artist\n",
-    "artist = Artist.create_from_query('boards of canada')\n",
-    "remixes = artist.get_remixes()"
+    "artist = Artist.create_from_query('daft punk')\n",
+    "remixes = artist.get_remixes(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "Counter([r.name for r in remixes]).most_common()\n",
+    "len(remixes)"
    ]
   },
   {
@@ -693,7 +717,27 @@
    },
    "outputs": [],
    "source": [
-    "related_artists = artist.get_related_artists()"
+    "def unique_decorator(func):\n",
+    "        \"\"\"\n",
+    "        Given a list of tracks from a func return uniquely named tracks.\n",
+    "\n",
+    "        If multiple tracks have the same name, the track\n",
+    "        with the highest popularity is chosen.\n",
+    "        \"\"\"\n",
+    "        def unique_func(*args, **kwargs):\n",
+    "            tracks = func(*args, **kwargs)\n",
+    "            unique_tracks = {}\n",
+    "            for track in tracks:\n",
+    "                if track.name in tracks:\n",
+    "                    if track.popularity > tracks['name'].popularity:\n",
+    "                        unique_tracks['name'] = track\n",
+    "                else:\n",
+    "                    unique_tracks[track.name] = track\n",
+    "\n",
+    "            return sorted(unique_tracks.values(),\n",
+    "                          key=lambda track: track.popularity,\n",
+    "                          reverse=True)\n",
+    "        return unique_func"
    ]
   },
   {
@@ -704,7 +748,11 @@
    },
    "outputs": [],
    "source": [
-    "len(related_artists)"
+    "@unique_decorator\n",
+    "def get_tracks(stupid, gay, really_gay='2r3'):\n",
+    "    return remixes\n",
+    "\n",
+    "unique_remixes = get_tracks(1, 2)"
    ]
   },
   {
@@ -715,23 +763,7 @@
    },
    "outputs": [],
    "source": [
-    "related_remixes = []\n",
-    "for rel_artist in related_artists:\n",
-    "    print rel_artist\n",
-    "    remixes = rel_artist.get_remixes()\n",
-    "    related_remixes.extend(remixes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "clark = related_artists[8]\n",
-    "remixes = clark.get_remixes()"
+    "Counter([r.name for r in unique_remixes]).most_common()"
    ]
   },
   {
@@ -815,6 +847,40 @@
    "source": [
     "for i in range(0,10,10):\n",
     "    print i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "name = \"Remixed by Daft Punk\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Remixed by <Daft Punk>'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.sub(\"Daft Punk\", \"<Daft Punk>\", name)"
    ]
   },
   {
