added foot, fixed bugs

--- a/prototype/Remix Recommender.ipynb
+++ b/prototype/Remix Recommender.ipynb
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -695,18 +695,36 @@
     {
      "data": {
       "text/plain": [
-       "23"
+       "{u'external_urls': {u'spotify': u'https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi'},\n",
+       " u'followers': {u'href': None, u'total': 2742563},\n",
+       " u'genres': [u'house'],\n",
+       " u'href': u'https://api.spotify.com/v1/artists/4tZwfgrHOc3mvqYlEYSvVi',\n",
+       " u'id': u'4tZwfgrHOc3mvqYlEYSvVi',\n",
+       " u'images': [{u'height': 751,\n",
+       "   u'url': u'https://i.scdn.co/image/e52651f03da8c9bf264f75cdabf39cf039606ddc',\n",
+       "   u'width': 999},\n",
+       "  {u'height': 481,\n",
+       "   u'url': u'https://i.scdn.co/image/b96d08f790bf2be50fee0aa490a7d06d40ba36bb',\n",
+       "   u'width': 640},\n",
+       "  {u'height': 150,\n",
+       "   u'url': u'https://i.scdn.co/image/5bafab32f2eb71e881de73ec4b088e106feb9e3f',\n",
+       "   u'width': 200},\n",
+       "  {u'height': 48,\n",
+       "   u'url': u'https://i.scdn.co/image/809d6b89f4bb3f0f42f86c953a8b312234a31f31',\n",
+       "   u'width': 64}],\n",
+       " u'name': u'Daft Punk',\n",
+       " u'popularity': 75,\n",
+       " u'type': u'artist',\n",
+       " u'uri': u'spotify:artist:4tZwfgrHOc3mvqYlEYSvVi'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from collections import Counter\n",
-    "Counter([r.name for r in remixes]).most_common()\n",
-    "len(remixes)"
+    "artist"
    ]
   },
   {
